<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_order"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="15dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:layout_marginTop="290dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extras"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="15dp"
        android:textSize="20sp" />
    <ImageView
        android:id="@+id/image1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dollar" />
    <RadioGroup
        android:id="@+id/extra_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="370dp"
        android:layout_marginLeft="15dp">
            <RadioButton
                android:id="@+id/meal_big"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/large_meal" />

            <RadioButton
                android:id="@+id/meal_small"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/no_meal" />
            <RadioButton
                android:id="@+id/no_meal"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/no_meal" />
    </RadioGroup>
    <Button
        android:id="@+id/place_order"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="90dp"
        android:onClick="onClickNotice"
        android:text="@string/place_order">
    </Button>

    <Button
        android:id="@+id/cancel_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:background="#00000000"
        android:textSize="12sp"
        android:textColor="#8BC34A"
        android:text="@string/cancel"
        android:onClick="onClickCancel">
    </Button>
</RelativeLayout>